Test/git-issues/git-issue-3294.dfy.expect
git-issue-3294.dfy(7,4): Error: member IsFailure does not exist in FailureRestrictedType<?, ?>, in :- statement
1 resolution/type errors detected in git-issue-3294.dfy
